フィルターの追加

--- a/23B_PG2_評価課題2.vcxproj.filters
+++ b/23B_PG2_評価課題2.vcxproj.filters
@@ -14,6 +14,12 @@
     <Filter Include="KamataEngine\Adapter">
       <UniqueIdentifier>{c6468eb4-788b-4a83-b207-a5f4804e56c5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="cpp">
+      <UniqueIdentifier>{e863f2c8-23bc-4b55-82d0-5936c2e06547}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="header">
+      <UniqueIdentifier>{ab47202e-5074-4657-8747-b48c5c4c5654}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="C:\KamataEngine\DirectXGame\base\DirectXCommon.cpp">
