--- a/23B_PG2_評価課題2.vcxproj.filters
+++ b/23B_PG2_評価課題2.vcxproj.filters
@@ -47,6 +47,12 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>KamataEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>cpp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\KamataEngine\DirectXGame\audio\Audio.h">
@@ -124,6 +130,10 @@
       <Filter>header</Filter>
     </ClInclude>
     <ClInclude Include="Struct.h">
+      <Filter>header</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Bullet.h">
       <Filter>header</Filter>
     </ClInclude>
   </ItemGroup>
