--- a/23B_PG2_評価課題2.vcxproj.filters
+++ b/23B_PG2_評価課題2.vcxproj.filters
@@ -53,6 +53,15 @@
     <ClCompile Include="Bullet.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
+    <ClCompile Include="BackGround.cpp">
+      <Filter>cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="BackGroundA.cpp">
+      <Filter>cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="BackGroundB.cpp">
+      <Filter>cpp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\KamataEngine\DirectXGame\audio\Audio.h">
@@ -134,6 +143,15 @@
     </ClInclude>
     <ClInclude Include="Player.h" />
     <ClInclude Include="Bullet.h">
+      <Filter>header</Filter>
+    </ClInclude>
+    <ClInclude Include="BackGround.h">
+      <Filter>header</Filter>
+    </ClInclude>
+    <ClInclude Include="BackGroundA.h">
+      <Filter>header</Filter>
+    </ClInclude>
+    <ClInclude Include="BackGroundB.h">
       <Filter>header</Filter>
     </ClInclude>
   </ItemGroup>
