--- a/23B_PG2_評価課題2.vcxproj.filters
+++ b/23B_PG2_評価課題2.vcxproj.filters
@@ -44,22 +44,7 @@
     <ClCompile Include="C:\KamataEngine\DirectXGame\base\StringUtility.cpp">
       <Filter>KamataEngine\Source</Filter>
     </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>cpp</Filter>
-    </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>KamataEngine</Filter>
-    </ClCompile>
-    <ClCompile Include="Bullet.cpp">
-      <Filter>cpp</Filter>
-    </ClCompile>
-    <ClCompile Include="BackGround.cpp">
-      <Filter>cpp</Filter>
-    </ClCompile>
-    <ClCompile Include="BackGroundA.cpp">
-      <Filter>cpp</Filter>
-    </ClCompile>
-    <ClCompile Include="BackGroundB.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
   </ItemGroup>
@@ -135,23 +120,10 @@
     <ClInclude Include="C:\KamataEngine\DirectXGame\base\StringUtility.h">
       <Filter>KamataEngine\Include</Filter>
     </ClInclude>
-    <ClInclude Include="Enemy.h">
-      <Filter>header</Filter>
-    </ClInclude>
     <ClInclude Include="Struct.h">
       <Filter>header</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="Bullet.h">
-      <Filter>header</Filter>
-    </ClInclude>
-    <ClInclude Include="BackGround.h">
-      <Filter>header</Filter>
-    </ClInclude>
-    <ClInclude Include="BackGroundA.h">
-      <Filter>header</Filter>
-    </ClInclude>
-    <ClInclude Include="BackGroundB.h">
+    <ClInclude Include="Player.h">
       <Filter>header</Filter>
     </ClInclude>
   </ItemGroup>
