--- a/23B_PG2_評価課題2.vcxproj.filters
+++ b/23B_PG2_評価課題2.vcxproj.filters
@@ -136,5 +136,6 @@
     <ClInclude Include="Bullet.h">
       <Filter>header</Filter>
     </ClInclude>
+    <ClInclude Include="Object.h" />
   </ItemGroup>
 </Project>
